--- a/Lab13StudentEnrollment/Lab13StudentEnrollment.csproj
+++ b/Lab13StudentEnrollment/Lab13StudentEnrollment.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\lib\bootstrap\" />
+    <Folder Include="wwwroot\styles\" />
   </ItemGroup>
 
   <ItemGroup>
