more styling, added deployment

--- a/Lab13StudentEnrollment/appsettings.json
+++ b/Lab13StudentEnrollment/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=lab13_student_enroll;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=lab13_student_enroll;Trusted_Connection=True;MultipleActiveResultSets=true",
   }
 }
